started work on the PPM modeler. Added chacha encryption. Added an unrelated Hmac based KDF that conforms to NIST SP800-108